[gd_scene load_steps=3 format=3 uid="uid://pphym055psij"]

[ext_resource type="Script" uid="uid://c5ygvtgl6jgtb" path="res://addons/TaskRunner/Dock/TasksTab/FileTaskEditor.gd" id="1_mlyv6"]
[ext_resource type="Texture2D" uid="uid://oad0tvxvh5p6" path="res://addons/TaskRunner/Icons/NodeWarning.svg" id="2_qtk5j"]

[node name="FileTaskEditor" type="VBoxContainer"]
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("1_mlyv6")

[node name="FileSelect" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FileSelect"]
layout_mode = 2
text = "Task File Path"

[node name="FileNameLabel" type="LineEdit" parent="FileSelect"]
unique_name_in_owner = true
layout_mode = 2
editable = false
expand_to_text_length = true

[node name="FileMissingWarning" type="HBoxContainer" parent="FileSelect"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="FileSelect/FileMissingWarning"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="FileSelect/FileMissingWarning"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_qtk5j")

[node name="Label" type="Label" parent="FileSelect/FileMissingWarning"]
layout_mode = 2
text = "Task File Missing"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="OpenFileInEditorButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Edit Task"

[node name="SelectFileButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Change Task File"
